WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171866
-Wreturn-type warning triggered by WKPage.cpp:2277
https://bugs.webkit.org/show_bug.cgi?id=171866
Summary
-Wreturn-type warning triggered by WKPage.cpp:2277
Michael Catanzaro
Reported
2017-05-09 11:02:29 PDT
[3490/4357] Building CXX object Source...bKit2.dir/UIProcess/API/C/WKPage.cpp.o ../../Source/WebKit2/UIProcess/API/C/WKPage.cpp: In static member function ‘static WKAutoplayEvent WKPageSetPageUIClient(WKPageRef, const WKPageUIClientBase*)::UIClient::toWKAutoplayEvent(WebCore::AutoplayEvent)’: ../../Source/WebKit2/UIProcess/API/C/WKPage.cpp:2277:9: warning: control reaches end of non-void function [-Wreturn-type] } ^
Attachments
Patch
(1.38 KB, patch)
2017-05-10 15:21 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-05-10 15:21:41 PDT
Created
attachment 309646
[details]
Patch
Michael Catanzaro
Comment 2
2017-05-20 08:05:09 PDT
Ping reviewers
WebKit Commit Bot
Comment 3
2017-05-22 11:17:11 PDT
Comment on
attachment 309646
[details]
Patch Clearing flags on attachment: 309646 Committed
r217228
: <
http://trac.webkit.org/changeset/217228
>
WebKit Commit Bot
Comment 4
2017-05-22 11:17:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug