-Wreturn-type warning triggered by WKPage.cpp:2277 https://bugs.webkit.org/show_bug.cgi?id=171866

Reviewed by Žan Doberšek.

* UIProcess/API/C/WKPage.cpp:
(WKPageSetPageUIClient):


Canonical link: https://commits.webkit.org/189354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217228 268f45cc-cd09-0410-ab3c-d52691b4dbfc